--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,10 @@ body {
  button{
     width: 30%;
  }
+ .titulos{
+    color: darkcyan;
+ }
+ .subtitulos{
+    color: dimgrey;
+    display: inline;
+ }
